# rust_example

./: LICENSE  rust_example.code-workspace
grpc_example/: Cargo.toml  README.md  application.yml  build.rs  docker-compose.yaml
grpc_example/proto/: tenant.proto
grpc_example/src/: main_grpc_server.rs
grpc_example/src/domain/: mod.rs  tenant_service.rs
grpc_example/src/grpc/: mod.rs  models.rs  tenant_grpc_service.rs  tenant_mapper.rs
grpc_example/src/telemetry/: logs_conf.rs  metrics_conf.rs  mod.rs  resources_conf.rs  traces_conf.rs
